--- a/src/app.html
+++ b/src/app.html
@@ -3,7 +3,7 @@
 
   <div class="header">
     <div class="home-menu pure-menu pure-menu-horizontal pure-menu-fixed">
-      <a class="pure-menu-heading" href="">Rumlepotten Arbejdslørdag</a>
+      <a class="pure-menu-heading" href="">${listName}</a>
 
       <ul class="pure-menu-list">
       </ul>
@@ -11,9 +11,14 @@
   </div>
 
   <div class="content-wrapper">
-    <ul>
-      <li repeat.for="card of cards">${card.name}</li>
-    </ul>
-
+    <div class="pure-g">
+      <div class="${columnClass}" repeat.for="card of cards">
+        <div class="card">
+          <div class="accent bg-${card.color}"></div>
+          <div class="name">${card.name}</div>
+          <div class="members">${card.members}</div>
+        </div>
+      </div>
+    </div>
   </div>
 </template>
