Custom column count.

--- a/src/app.html
+++ b/src/app.html
@@ -6,6 +6,9 @@
       <a class="pure-menu-heading" href="">${listName}</a>
 
       <ul class="pure-menu-list">
+        <li class="pure-menu-item"><button class="pure-button square-button">+</button></li>
+        <li class="pure-menu-item">${columns}</li>
+        <li class="pure-menu-item"><button class="pure-button square-button">-</button></li>
       </ul>
     </div>
   </div>
